manifests/test/argocd/Gateway-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
    cert-manager.io/cluster-issuer: cluster-ca
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.53
  listeners:
    - hostname: argocd.10.5.0.53.nip.io
      name: argocd
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: argocd-gateway-tls
        mode: Terminate
